2007-06-13  Naba Kumar  <naba@gnome.org>

	* plugins/sourceview/sourceview-prefs.c: Use desktop fixed font
	if available for default font. Fixes bug #447304.

	* plugins/sourceview/sourceview-prefs.c: Return value based
	on right data type. Fixes Bug #438878 – Using gtksourceview editor
	for the first time has black background
	
	* plugins/project-manager/plugin.c: Give a better error message
	when project could not be loaded.

	* libanjuta/anjuta-serializer.c: Added a comment.

2007-06-13  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	Use GNOME_COMPILE_WARNINGS(maximum) instead of hand-written macro. Show
	most warnings to avoid simple coding problems.
	
	* plugins/message-view/anjuta-msgman.c:
	(anjuta_msgman_append_view), (anjuta_msgman_set_current_view):
	* plugins/message-view/plugin.c: (on_view_changed),
	(ianjuta_msgman_add_view):
	
	Fixed #440866 by always presenting the message-manager when a tab is
	added because Gtk+ seems to have problems to add tabs to hidden widgets.
	
	* plugins/subversion/subversion-callbacks.c:
	(on_subversion_commit_response):
	Destroy dialog if user clicks "No"

2007-06-12  Naba Kumar  <naba@gnome.org>

	* tagmanager/tm_tag.c, tagmanager/tm_workspace.c: Fixes an invalid
	read and use of uninitialized variable.

	* Makefile.am, src/about.c: Install AUTHORS file in datadir also
	because it is used in credits listing and packaging could compress
	it in docdir. Fixes bug #397881: The credits are empty

	* tagmanager/tm_tag.c, tagmanager/include/tm_tag.h,
	tagmanager/include/tm_workspace.h, tagmanager/include/tm_symbol.h,
	tagmanager/tm_workspace.c, tagmanager/tm_symbol.c,
	plugins/symbol-browser/an_symbol_info.c,
	plugins/symbol-browser/plugin.c,
	plugins/symbol-browser/an_symbol_view.c,
	plugins/editor/aneditor-autocomplete.cxx:

	- Do not access TMTag
	member in TMSymbol when freeing it because by then the tags
	could have changed. Avoids dangerous memory corruptions by freeing